[gd_scene load_steps=12 format=3 uid="uid://c2bya7jvn8luj"]

[ext_resource type="Script" path="res://Autoloads/HUD.gd" id="1_ih3gh"]
[ext_resource type="PackedScene" uid="uid://c7bpadmpmu5g3" path="res://Menus/PauseMenu.tscn" id="1_l1osx"]
[ext_resource type="Script" path="res://Autoloads/Scoreboard.gd" id="2_ooany"]
[ext_resource type="Texture2D" uid="uid://dwg7182f40h5u" path="res://Characters/CrossHair.png" id="5_7v388"]
[ext_resource type="Texture2D" uid="uid://bakhbfe2uhg4u" path="res://Characters/Scope.png" id="6_1t7b4"]
[ext_resource type="Script" path="res://Characters/BotSim/MatchTimer.gd" id="7_7tmu3"]
[ext_resource type="Script" path="res://Characters/BotSim/LeaderList.gd" id="7_28wp2"]
[ext_resource type="Texture2D" uid="uid://crqwjsvsfkcig" path="res://Characters/DmgArrow.png" id="8_yj7y2"]

[sub_resource type="LabelSettings" id="LabelSettings_vr44o"]
resource_local_to_scene = true
font_size = 72
font_color = Color(0.121569, 0.121569, 0.121569, 1)
outline_size = 5
outline_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vgpdo"]
resource_local_to_scene = true
font_size = 48
font_color = Color(0.121569, 0.121569, 0.121569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0pkc5"]
font_size = 48
font_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ih3gh")

[node name="MatchTimer" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 1920.0
offset_bottom = -441.0
grow_horizontal = 2
grow_vertical = 2
text = "00 : 00"
label_settings = SubResource("LabelSettings_vr44o")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_7tmu3")
metadata/_edit_use_anchors_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="Sprite2D" parent="UI"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_7v388")

[node name="Scope" type="Sprite2D" parent="UI"]
visible = false
texture = ExtResource("6_1t7b4")

[node name="Weapon" type="VBoxContainer" parent="UI"]
offset_left = 637.0
offset_top = 331.0
offset_right = 735.0
offset_bottom = 469.0
metadata/_edit_use_anchors_ = true

[node name="AmmoInMag" type="Label" parent="UI/Weapon"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 0"
label_settings = SubResource("LabelSettings_vgpdo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExtraAmmo" type="Label" parent="UI/Weapon"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_0pkc5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Damage" type="Node2D" parent="UI"]
unique_name_in_owner = true

[node name="Left" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1397, -107)
rotation = -3.14159
scale = Vector2(1.38477, 1.38477)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Right" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1413, 61)
scale = Vector2(1.38477, 1.38477)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Up" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(164, -1046)
rotation = -1.57079
scale = Vector2(1.38477, 2.15647)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Down" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-142, 1034)
rotation = 1.57081
scale = Vector2(1.38477, 2.15647)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="HealthMod" type="CanvasModulate" parent="UI"]
unique_name_in_owner = true
position = Vector2(-959, -540)

[node name="HealthBar" type="VBoxContainer" parent="UI/HealthMod"]
custom_minimum_size = Vector2(75, 0)
offset_left = 55.0
offset_top = 91.0
offset_right = 130.0
offset_bottom = 976.0
theme_override_constants/separation = 15

[node name="Health1" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health2" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health3" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health4" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health5" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health6" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health7" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health8" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health9" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health10" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="ArmorBar" type="VBoxContainer" parent="UI/HealthMod"]
custom_minimum_size = Vector2(75, 0)
offset_left = 1793.0
offset_top = 91.0
offset_right = 1868.0
offset_bottom = 976.0
theme_override_constants/separation = 15

[node name="Armor1" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor2" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor3" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor4" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor5" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor6" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor7" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor8" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor9" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor10" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Score" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.0
offset_top = -310.0
offset_right = 1350.0
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.603867, 0.603867)
script = ExtResource("2_ooany")

[node name="Name" type="Label" parent="Score"]
layout_mode = 0
offset_left = 72.0
offset_top = 108.0
offset_right = 289.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Name"

[node name="Kill" type="Label" parent="Score"]
layout_mode = 0
offset_left = 646.0
offset_top = 108.0
offset_right = 787.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Kills"

[node name="Deaths" type="Label" parent="Score"]
layout_mode = 0
offset_left = 1237.0
offset_top = 108.0
offset_right = 1482.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Deaths"

[node name="List" type="ItemList" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -888.0
offset_top = -326.0
offset_right = 888.0
offset_bottom = 436.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 233
theme_override_font_sizes/font_size = 72
max_columns = 3
same_column_width = true
fixed_column_width = 353

[node name="LeaderList" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 188.0
offset_top = 526.0
offset_right = 466.0
offset_bottom = 796.0
script = ExtResource("7_28wp2")

[node name="List" type="VBoxContainer" parent="LeaderList"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.167
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 2

[node name="FadeInOut" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1082.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("1_l1osx")]
visible = false
top_level = true
